fix(ui): Adjust warehouse list display and cell alignment for tablet view

--- a/src/components/WarehouseItemRow/WarehouseItemRow.scss
+++ b/src/components/WarehouseItemRow/WarehouseItemRow.scss
@@ -25,12 +25,6 @@
   }
 }
 
-.warehouse-item__name{
-  padding-left: 1rem;
-  padding-right: 1rem;
-  width: 50%;
-}
-
 label{
     font-weight: bold;
     display: inline-block;
